--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,11 @@
 body {
   background-color: lightblue;
 }
+.center {
+  margin-top: 3%;
+  text-align: center;
+}
+
+img {
+  margin-bottom: 10px;
+}
